<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of Commotion Mesh Tether
  Copyright (C) 2010 by Szymon Jakubczak

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Mesh Tether</string>
    <string name="clientview">Mesh links</string>
    <string name="notify_running">Connecting to the mesh…</string>
    <string name="notify_client">Client connected</string>
    <string name="notify_error">Error occured</string>
    <string name="announce">Associate</string>
    <string name="noprefs">Please, set your preferences</string>
    <string name="noclients">No clients connected</string>
    <string name="starting">Starting</string>
    <string name="dataready">Data network is ready</string>
    <string name="disablewifi">Disabling Wifi Manager…</string>
    <string name="conflictwifi">Wifi Manager is interfering with MeshTether!</string>
    <string name="waitwifi">Waiting until Wifi is disabled</string>
    <string name="running">Running…</string>
    <string name="restarting">Restarting…</string>
    <string name="beaconing">beaconing ad-hoc network</string>
    <string name="filterok">Connected to NAT</string>
    <string name="filtererr">Could not connect to NAT, will retry later</string>
    <string name="filterupdated">Updated NAT filter</string>
    <string name="connected">Connected %s</string>
    <string name="stopped">Stopped</string>
    <string name="wanerr">Could not find WAN interface</string>
    <string name="wanok">Mobile data interface found: </string>
    <string name="lanok">Wireless interface found: </string>
    <string name="starterr">Could not start the process!</string>
    <string name="unpacking">Unpacking assets…</string>
    <string name="unpackerr">Could not unpack binaries</string>
    <string name="unpackerr1">Could not unpack %s"</string>
    <string name="chmoderr">Could not make the binary executable</string>
    <string name="enablingwifi">Enabling wifi…</string>
    <string name="execerr">Could not execute %s</string>
    <string name="dirtystop">Warning: did not finish cleanly</string>
    <string name="unexpected">Stopped unexpectedly!</string>
    <string name="exception">Exception occured!</string>
    <string name="invalidip">Invalid IP address</string>
    <string name="invalidmac">Invalid MAC address</string>
    <string name="current">Current: </string>
    <string name="restartneeded">Restart for changes to take effect</string>
    <string name="onoff">on/off</string>
    <string name="waiting_for_olsrd">waiting for olsrd to start…</string>
    <string name="no_data_yet">(no data yet)</string>

    <!-- messages related to the mesh profiles -->
    <string name="choose_profile">Choose a mesh profile</string>
    <string name="profile_load_error">Failed to load profile!</string>
    <string name="defaultprofile">(default)</string>

    <!-- messages for the Settings/Preferences -->
    <string name="profile_name_title">Profile Name</string>
    <string name="general_settings">General Settings</string>
    <string name="ssid">SSID (Network Name)</string>
    <string name="bssid">BSSID (Network ID)</string>
    <string name="bssid_hint">unique MAC address</string>
    <string name="channel">Wifi Channel</string>
    <string name="mesh_ip">Mesh Node IP</string>
    <string name="mesh_netmask">Mesh Node Netmask</string>
    <string name="mesh_nameserver">DNS Server</string>
    <string name="adhoc_settings">Adhoc Wifi Setup</string>
    <string name="invalidmeship">Invalid Mesh Prefix or IP.</string>

    <!-- messages for the ProgressDialog -->
    <string name="servicestarting">Mesh service starting…</string>
    <string name="startingolsrd">Starting olsrd…</string>
    <string name="servicestopping">Mesh service stopping…</string>

    <!-- Share OLSR Status -->
    <string name="gettingolsrinfo">Getting info from olsrd…</string>
    <string name="writingfile">Writing info to file…</string>
    <string name="zippingfile">Zipping up file…</string>
    <string name="olsrdnotrunning">olsrd is not running, no status information available!</string>

    <!-- About -->
    <string name="about_text">Commotion is an open-source communication tool that uses mobile phones, computers and other wireless devices to create decentralized mesh networks.\n\n<a href="https://commotionwireless.net/about/license-privacy">Version: 1.0 Android License &amp; Privacy Policy</a>\n\n<a href="https://commotionwireless.net/docs">Get Help</a>\n\n<a href="https://commotionwireless.net/developer/resources">Get Involved</a></string>
    <!-- Welcome -->
    <string name="welcome_text">Welcome to Commotion!\n\nSelect/edit your mesh profile above, then click the button on the right to connect.\n\nCommotion is an open-source communication tool that uses mobile phones, computers and other wireless devices to create decentralized mesh networks.\n\n<a href="https://commotionwireless.net">Learn more</a></string>
    <!-- Share OLSR Status -->
    <string name="help_title">Help</string>
    <string name="help_message">Mesh on the phone is experimental! Please check our wiki, email our mailing list, or find us on IRC.</string>

    <!-- DO NOT TRANSLATE -->
    <string name="profile_name">profile_name</string>
    <string name="if_wan">if_wan</string>
    <string name="if_lan">if_lan</string>
    <string name="adhoc_netmask">adhoc_netmask</string>
    <string name="adhoc_ip">adhoc_ip</string>
    <string name="lan_essid">lan_essid</string>
    <string name="lan_bssid">lan_bssid</string>
    <string name="lan_channel">lan_channel</string>
    <string name="lan_wext">lan_wext</string>
    <string name="lan_script">lan_script</string>
    <string name="adhoc_dns_server">adhoc_dns_server</string>
    <string name="use_mdp">use_mdp</string>
    <string name="mdp_servalpath">mdp_servalpath</string>
    <string name="mdp_sid">mdp_sid</string>

    <string-array name="channel_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="channel_names">
        <item>1 – 2412 MHz</item>
        <item>2 – 2417 MHz</item>
        <item>3 – 2422 MHz</item>
        <item>4 – 2427 MHz</item>
        <item>5 – 2432 MHz</item>
        <item>6 – 2437 MHz</item>
        <item>7 – 2442 MHz</item>
        <item>8 – 2447 MHz</item>
        <item>9 – 2452 MHz</item>
        <item>10 – 2457 MHz</item>
        <item>11 – 2462 MHz</item>
        <item>12 – 2467 MHz</item>
        <item>13 – 2472 MHz</item>
        <item>14 - 2484 MHz</item>
    </string-array>
    <string-array name="script_values">
        <item></item>
        <item>script_hero</item>
        <item>script_samsung</item>
        <item>script_aria</item>
    </string-array>
    <string-array name="script_names">
        <item>none</item>
        <item>Hero/Eris</item>
        <item>Samsung</item>
        <item>Aria/Liberty (see blog)</item>
    </string-array>

    <string name="websiteUrl">http://commotionwireless.net/</string>
    <string name="ircUrl">http://webchat.freenode.net/?randomnick=1&amp;channels=oti&amp;uio=d4</string>
    <string name="fixUrl">https://code.commotionwireless.net/projects/commotion/wiki/Android_Troubleshooting</string>
    <string name="rootUrl">http://szym.net/barnacle/faq/#root</string>
    <string name="wikiUrl">https://code.commotionwireless.net/projects/commotion/wiki</string>

</resources>