<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of Commotion Mesh Tether
  Copyright (C) 2010 by Szymon Jakubczak

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/mesh_profile" >
        <EditTextPreference
            android:key="@string/profile_name"
            android:singleLine="true"
            android:title="@string/profile_name_title" />
        
        <EditTextPreference
            android:key="@string/lan_essid"
            android:singleLine="true"
            android:title="@string/ssid" />

        <net.commotionwireless.meshtether.MACPreference
            android:hint="@string/bssid_hint"
            android:key="@string/lan_bssid"
            android:singleLine="true"
            android:inputType="text|textNoSuggestions"
            android:title="@string/bssid" />

        <ListPreference
            android:entries="@array/channel_names"
            android:entryValues="@array/channel_values"
            android:key="@string/lan_channel"
            android:title="@string/channel" />
        <net.commotionwireless.meshtether.MeshIPPreference
            android:key="@string/adhoc_ip"
            android:singleLine="true"
            android:title="@string/mesh_ip" />

        <net.commotionwireless.meshtether.IPPreference
            android:key="@string/adhoc_netmask"
            android:singleLine="true"
            android:title="@string/mesh_netmask" />

        <net.commotionwireless.meshtether.IPPreference
            android:key="@string/adhoc_dns_server"
            android:singleLine="true"
            android:title="@string/mesh_nameserver" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/adhoc_settings" >
        <ListPreference
            android:entries="@array/script_names"
            android:entryValues="@array/script_values"
            android:key="@string/lan_script"
            android:title="Custom Wifi Ad-hoc" />

        <CheckBoxPreference
            android:key="@string/lan_wext"
            android:summary="Configure wifi directly"
            android:title="Skip wpa_supplicant" />
        <CheckBoxPreference
            android:key="lan_autoassoc"
            android:summary="Associate every 5 seconds until a client connects"
            android:title="Auto Associate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Interfaces" >
        <EditTextPreference
            android:hint="leave empty to autodetect"
            android:key="@string/if_wan"
            android:singleLine="true"
            android:title="WAN" />

        <EditTextPreference
            android:hint="leave empty to autodetect"
            android:key="@string/if_lan"
            android:singleLine="true"
            android:title="LAN" />
    </PreferenceCategory>

	<PreferenceCategory android:title="Security" >
	    <CheckBoxPreference
            android:key="@string/use_mdp"
            android:title="Use MDP" />

        <net.commotionwireless.meshtether.StringPreference
            android:key="@string/mdp_servalpath"
            android:singleLine="true"
            android:title="MDP Serval Path" />

        <ListPreference
            android:key="@string/mdp_sid"
            android:title="MDP SID" />
    </PreferenceCategory>
</PreferenceScreen>